--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTEkBsfhAU5oskqwUH9oIXsVvTFt2jkdZ8jsw&usqp=CAU">
+    <title>3D viewer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
